--- a/3d-obj/aframe-test.html
+++ b/3d-obj/aframe-test.html
@@ -10,7 +10,7 @@
   <body>  
     
     <a-scene>
-      <a-entity geometry='primitive: sphere' material='shader: html; target: #htmlElement'></a-entity>
+      <a-entity geometry="primitive:box;width:3;height:3;depth:3;" rotation="30 60 30" material='shader: html; target: #htmlElement'></a-entity>
     </a-scene>
     
     <div style='width: 100%; height: 100%; position: fixed; left: 0; top: 0; z-index: -1; overflow: hidden'>
