--- a/3d-obj/aframe-test.html
+++ b/3d-obj/aframe-test.html
@@ -10,10 +10,10 @@
   <body>  
     
     <a-scene>
-      <a-entity geometry="primitive:box;width:3;height:3;depth:3;" rotation="30 60 30" material="shader: html; target: #htmlElement"></a-entity>
+      <a-entity geometry="primitive:box;width:3;height:3;depth:3;" rotation="30 60 30" material="shader: html; target: #htmlElement;"></a-entity>
       
       <!-- letters -->
-      <a-entity id="lettersEntity" geometry="primitive:plane;width:2;height:2;" rotation="-30 -30 0" position="-0.2 1.5 2.5" material="shader:html;target:#htmlElement;transparent:true;ratio:width;fps:1.5;"></a-entity>
+      <a-entity id="lettersEntity" geometry="primitive:plane;width:2;height:2;" rotation="-30 -30 0" position="-0.2 1.5 2.5" material="shader:html;target:#htmlElement;transparent:true;ratio:width;"></a-entity>
 
       <!-- sky -->
       <a-sky color="pink"></a-sky>
