--- a/emoji/AllEmoji.html
+++ b/emoji/AllEmoji.html
@@ -57,7 +57,7 @@
 </head>
 <body>
 
-<div class=aa>
+<div class=aa><div class=list>
 <input type="search" class="fuzzy-search" placeholder="fuzzy search!">
 <div class=bb><p class=cc>&#x1F170;</p><span class=dd>0.6</span><div class=info><span class=ee>A button (blood type) </span><span class=ff>1F170</span></div></div>
 <div class=bb><p class=cc>&#x1F170;&#xFE0F;</p><span class=dd>0.6</span><div class=info><span class=ee>A button (blood type) </span><span class=ff>1F170 FE0F</span></div></div>
@@ -4789,12 +4789,11 @@
 <div class=bb><p class=cc>&#x1FAE8;</p><span class=dd>15.0</span><div class=info><span class=ee>shaking face </span><span class=ff>1FAE8</span></div></div>
 <div class=bb><p class=cc>&#x1FABD;</p><span class=dd>15.0</span><div class=info><span class=ee>wing </span><span class=ff>1FABD</span></div></div>
 <div class=bb><p class=cc>&#x1F6DC;</p><span class=dd>15.0</span><div class=info><span class=ee>wireless </span><span class=ff>1F6DC</span></div></div>
-</div>
+	</div></div>
 	
 	
 	
 <script>
-	
 var options = {
     valueNames: [ 'ee', 'ff' ]
 };
