--- a/emoji/AllEmoji.html
+++ b/emoji/AllEmoji.html
@@ -4789,8 +4789,8 @@
 <div class=bb><p class=cc>&#x1F6DC;</p><span class=dd>15.0</span><div class=info><span class=ee>wireless </span><span class=ff>1F6DC</span></div></div>
 	</div></div></div>
 	
-	
-<script src="https://cdnjs.cloudflare.com/ajax/libs/list.js/1.0.2/list.min.js" integrity="sha512-MT5YyrGWqMGkIbwkVUZEWGrRDjlNx8loukEdFyzLo4s8INKVxnDQy2eFcpmnWGrFwJ+X8mRTQOJpWCayXz7+Og==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/list.js/1.5.0/list.js"></script>	
 <script>
 var options = {
     valueNames: [ 'ee', 'ff' ]
