--- a/emoji/AllEmoji.html
+++ b/emoji/AllEmoji.html
@@ -55,8 +55,9 @@
 </head>
 <body>
 
-<div class=main><div class=list><div class=aa>
-<input type="search" class="search" placeholder="Search!">
+<div id=main><input type="search" class="search" placeholder="Search!">
+<div class=list>
+<div class=aa>
 <div class=bb><p class=cc>&#x1F170;</p><span class=dd>0.6</span><div class=info><span class=ee>A button (blood type) </span><span class=ff>1F170</span></div></div>
 <div class=bb><p class=cc>&#x1F170;&#xFE0F;</p><span class=dd>0.6</span><div class=info><span class=ee>A button (blood type) </span><span class=ff>1F170 FE0F</span></div></div>
 <div class=bb><p class=cc>&#x1F18E;</p><span class=dd>0.6</span><div class=info><span class=ee>AB button (blood type) </span><span class=ff>1F18E</span></div></div>
