--- a/emoji/AllEmoji.html
+++ b/emoji/AllEmoji.html
@@ -1,6 +1,9 @@
 <html>
 <head>
-	
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/list.js/1.5.0/list.min.js"></script>	
+
 <style>
 .aa { 
 	display: flex;
