--- a/emoji/AllEmoji.html
+++ b/emoji/AllEmoji.html
@@ -10,6 +10,8 @@
 { 
 	width: 200px; 
 	border: none 1px #eee;
+  list-type: none;
+  display: block;
 }
 .dd
 { 
@@ -41,6 +43,12 @@
 	font-size: 9px;
 	width: 100%;
 	font-family: consolas, monospace;
+}
+.search {
+	width: 90%;
+	padding: 20px;
+	margin:  20px;
+	border-radius: 5px;
 }
 
 </style>
