--- a/emoji/AllEmoji.html
+++ b/emoji/AllEmoji.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-
+	<title>All emojis</title>
 <style>
 .aa { 
 	display: flex;
@@ -8,29 +8,29 @@
  }
 .bb 
 { 
-  width: 200px; 
-  border: none 1px #eee;
-  list-type: none;
-  display: block;
+  	width: 200px; 
+  	border: none 1px #eee;
+  	list-type: none;
+  	display: block;
 }
 .dd
 { 
-  font-size: 10px;
-  font-family: monospace; 
-  padding: 5px 10px 5px 5px ; 
-  color: silver; 
-  width: 10%;
-  height: 100%;
-  display: inline-block;
-  float: left;
-  vertical-align: top;
+  	font-size: 10px;
+  	font-family: monospace; 
+  	padding: 5px 10px 5px 5px ; 
+  	color: silver; 
+  	width: 10%;
+  	height: 100%;
+  	display: inline-block;
+  	float: left;
+  	vertical-align: top;
 }
 .cc {
-    font-size: 50px;
-    display: inline-block;
-    width: 100%;
-    text-align: center;
-    line-height: 10px;
+    	font-size: 50px;
+    	display: inline-block;
+    	width: 100%;
+    	text-align: center;
+    	line-height: 10px;
 }
 .ee { 
 	font-size: 16px; 
@@ -52,8 +52,6 @@
 }
 
 </style>
-
-
 
 </head>
 <body>
@@ -42638,7 +42636,7 @@
 </ul>
 </div>
 <script>
-var options = { valueNames: [ 'ee', 'ff' ], searchDelay: 750 };
+var options = { valueNames: [ 'ee', 'ff' ], searchDelay: 750, indexAsync: true };
 var EmojiList = new List('BigEmojiTable', options);
 </script>
 </body>
