--- a/emoji/AllEmoji.html
+++ b/emoji/AllEmoji.html
@@ -13,6 +13,13 @@
   	list-type: none;
   	display: block;
 }
+.cc {
+    	font-size: 50px;
+    	display: inline-block;
+    	width: 100%;
+    	text-align: center;
+    	line-height: 10px;
+}	
 .dd
 { 
   	font-size: 10px;
@@ -24,13 +31,6 @@
   	display: inline-block;
   	float: left;
   	vertical-align: top;
-}
-.cc {
-    	font-size: 50px;
-    	display: inline-block;
-    	width: 100%;
-    	text-align: center;
-    	line-height: 10px;
 }
 .ee { 
 	font-size: 16px; 
@@ -60,7 +60,7 @@
 
 
 <div id="BigEmojiTable">
-<input class=search value=" ">
+<input class=search />
 <ul class="list aa">
 
 <li class=bb>
