--- a/emoji/AllEmoji.html
+++ b/emoji/AllEmoji.html
@@ -44,7 +44,7 @@
 	width: 100%;
 	font-family: consolas, monospace;
 }
-.fuzzy-search {
+.fuzzy-search, .search {
 	width: 90%;
 	padding: 20px;
 	margin:  20px;
@@ -60,7 +60,7 @@
 
 
 <div id="BigEmojiTable">
-<input class=fuzzy-search />
+<input class=search />
 <ul class="list aa">
 
 <li class=bb>
@@ -42636,7 +42636,7 @@
 </ul>
 </div>
 <script>
-var options = { valueNames: [ 'ee', 'ff' ], searchDelay: 750, indexAsync: true };
+var options = { valueNames: [ 'ee', 'ff' ], searchDelay: 2000, indexAsync: true };
 var EmojiList = new List('BigEmojiTable', options);
 </script>
 </body>
