--- a/emoji/AllEmoji.html
+++ b/emoji/AllEmoji.html
@@ -1,54 +1,55 @@
 <html>
+<meta charset="UTF-8">
 <head>
-	<title>All emojis</title>
+<title>All emojis</title>
 <style>
 .aa { 
-	display: flex;
-	flex-wrap: wrap
- }
+ display: flex;
+ flex-wrap: wrap
+}
 .bb 
 { 
-  	width: 200px; 
-  	border: none 1px #eee;
-  	list-type: none;
-  	display: block;
+ width: 200px; 
+ border: none 1px #eee;
+ list-type: none;
+ display: block;
 }
 .cc {
-    	font-size: 50px;
-    	display: inline-block;
-    	width: 100%;
-    	text-align: center;
-    	line-height: 10px;
-}	
+ font-size: 50px;
+ display: inline-block;
+ width: 100%;
+ text-align: center;
+ line-height: 10px;
+}
 .dd
 { 
-  	font-size: 10px;
-  	font-family: monospace; 
-  	padding: 5px 10px 5px 5px ; 
-  	color: silver; 
-  	width: 10%;
-  	height: 100%;
-  	display: inline-block;
-  	float: left;
-  	vertical-align: top;
+ font-size: 10px;
+ font-family: monospace; 
+ padding: 5px 10px 5px 5px ; 
+ color: silver; 
+ width: 10%;
+ height: 100%;
+ display: inline-block;
+ float: left;
+ vertical-align: top;
 }
 .ee { 
-	font-size: 16px; 
-	width: 80%;
-	display: inline-block;	
-	font-family: Arial Rounded MT Bold, TW Cen MT;
-	padding-bottom: 10px;
+ font-size: 16px; 
+ width: 80%;
+ display: inline-block;
+ font-family: Arial Rounded MT Bold, TW Cen MT;
+ padding-bottom: 10px;
 }
 .ff {
-	font-size: 9px;
-	width: 100%;
-	font-family: consolas, monospace;
+ font-size: 9px;
+ width: 100%;
+ font-family: consolas, monospace;
 }
 .fuzzy-search, .search {
-	width: 90%;
-	padding: 20px;
-	margin:  20px;
-	border-radius: 5px;
+ width: 90%;
+ padding: 20px;
+ margin: 20px;
+ border-radius: 5px;
 }
 
 </style>
@@ -60,7 +61,7 @@
 
 
 <div id="BigEmojiTable">
-<input class=search />
+<input class=search placeholder="List contains 4k+ characters. Search may be slow." />
 <ul class="list aa">
 
 <li class=bb>
