--- a/emoji/AllEmoji.html
+++ b/emoji/AllEmoji.html
@@ -48,7 +48,7 @@
 .fuzzy-search, .search {
  width: 90%;
  padding: 20px;
- margin: 20px;
+ margin: 1% 5%;
  border-radius: 5px;
 }
 
@@ -61,7 +61,7 @@
 
 
 <div id="BigEmojiTable">
-<input class=search placeholder="List contains 4k+ characters. Search may be slow." />
+<input class=search placeholder="List contains 4k+ characters. Search may be slow. Typing slowly also helps." />
 <ul class="list aa">
 
 <li class=bb>
