--- a/emoji/AllEmoji.html
+++ b/emoji/AllEmoji.html
@@ -42636,7 +42636,7 @@
 
 </ul>
 </div>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.lazyload/1.9.1/jquery.lazyload.min.js" integrity="sha512-jNDtFf7qgU0eH/+Z42FG4fw3w7DM/9zbgNPe3wfJlCylVDTT3IgKW5r92Vy9IHa6U50vyMz5gRByIu4YIXFtaQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>  
+<script src="https://unpkg.com/browse/jquery.lazyload.cjs@1.9.8-beta.1/jquery.lazyload.js"></script>  
 <script>
 var options = { valueNames: [ 'ee', 'ff' ], searchDelay: 2000, indexAsync: true };
 var EmojiList = new List('BigEmojiTable', options);
